<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mehmetalivargun.odev1.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F9FF"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"

        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".ui.login.LoginPage">


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_playing"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintWidth_percent="0.85">

        </View>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/text_shape"
            android:drawableStart="@drawable/ic_user"

            android:drawablePadding="@dimen/_18sdp"
            android:elevation="4dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_20sdp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintWidth_percent="0.85" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/text_shape"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_18sdp"
            android:elevation="4dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_20sdp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintWidth_percent="0.85" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#78909C"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button"
            android:backgroundTint="#EE1D81"
            android:enabled="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:clickable="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <TextView
            android:id="@+id/dontHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dont_have_account"
            android:textAlignment="center"
            android:textColor="#78909C"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="353dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>